[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["pavel <Dante94_94@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
self = "^2020.12.3"
isodate = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
